--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ tramp
 
 ## Directory-based project format:
 .idea/
-# if you remove the above rule, at least ignore the follwing:
+# if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
 # .idea/workspace.xml
