--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ tramp
 # AUCTeX auto folder
 /auto/
 
+# cask packages
+.cask/
+
 
 ### Ensime ###
 # Ensime specific
@@ -48,7 +51,7 @@ tramp
 ### JetBrains ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
 
-/*.iml
+*.iml
 
 ## Directory-based project format:
 .idea/
@@ -90,6 +93,8 @@ atlassian-ide-plugin.xml
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
 
 
 ### Kate ###
