--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,9 @@ crashlytics-build.properties
 # KDE directory preferences
 .directory
 
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
 
 ### Matlab ###
 ##---------------------------------------------------
@@ -230,7 +233,7 @@ tmtags
 .vagrant/
 
 
-### vim ###
+### Vim ###
 [._]*.s[a-w][a-z]
 [._]s[a-w][a-z]
 *.un~
