--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ tramp
 ### Ensime ###
 # Ensime specific
 .ensime
+.ensime_cache/
 .ensime_lucene/
 
 
@@ -83,7 +84,7 @@ tramp
 ## Plugin-specific files:
 
 # IntelliJ
-out/
+/out/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -159,9 +160,13 @@ Icon
 # Thumbnails
 ._*
 
-# Files that might appear on external disk
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
 .Spotlight-V100
+.TemporaryItems
 .Trashes
+.VolumeIcon.icns
 
 # Directories potentially created on remote AFP share
 .AppleDB
