--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Created by https://www.gitignore.io/api/cvs,emacs,ensime,jetbrains,kate,kdevelop4,linux,matlab,mercurial,notepadpp,osx,slickedit,sublimetext,svn,tags,textmate,vagrant,vim,windows,xcode
 
 ### CVS ###
@@ -41,6 +42,12 @@ tramp
 # cask packages
 .cask/
 
+# Flycheck
+flycheck_*.el
+
+# server auth directory
+/server/
+
 
 ### Ensime ###
 # Ensime specific
@@ -50,35 +57,31 @@ tramp
 
 
 ### JetBrains ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
-
-*.iml
-
-## Directory-based project format:
-.idea/
-# if you remove the above rule, at least ignore the following:
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-# .idea/workspace.xml
-# .idea/tasks.xml
-# .idea/dictionaries
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
 
 # Sensitive or high-churn files:
-# .idea/dataSources.ids
-# .idea/dataSources.xml
-# .idea/sqlDataSources.xml
-# .idea/dynamic.xml
-# .idea/uiDesigner.xml
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
 
 # Gradle:
-# .idea/gradle.xml
-# .idea/libraries
+.idea/gradle.xml
+.idea/libraries
 
 # Mongo Explorer plugin:
-# .idea/mongoSettings.xml
+.idea/mongoSettings.xml
 
 ## File-based project format:
-*.ipr
 *.iws
 
 ## Plugin-specific files:
@@ -96,6 +99,7 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
+fabric.properties
 
 
 ### Kate ###
@@ -111,6 +115,9 @@ crashlytics-build.properties
 
 ### Linux ###
 *~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
 
 # KDE directory preferences
 .directory
@@ -137,11 +144,17 @@ crashlytics-build.properties
 # Simulink Code Generation
 slprj/
 
+# Session info
+octave-workspace
+
 
 ### Mercurial ###
-/.hg/*
-*/.hg/*
+.hg/
 .hgignore
+.hgsigs
+.hgsub
+.hgsubstate
+.hgtags
 
 
 ### NotepadPP ###
@@ -214,8 +227,10 @@ sftp-config.json
 ### Tags ###
 # Ignore tags created by etags, ctags, gtags (GNU global) and cscope
 TAGS
+.TAGS
 !TAGS/
 tags
+.tags
 !tags/
 gtags.files
 GTAGS
@@ -239,10 +254,12 @@ tmtags
 
 
 ### Vim ###
+# swap
 [._]*.s[a-w][a-z]
 [._]s[a-w][a-z]
-*.un~
+# session
 Session.vim
+# temporary
 .netrwhist
 *~
 
@@ -275,7 +292,7 @@ $RECYCLE.BIN/
 
 ## Build generated
 build/
-DerivedData
+DerivedData/
 
 ## Various settings
 *.pbxuser
@@ -286,10 +303,10 @@ DerivedData
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-xcuserdata
+xcuserdata/
 
 ## Other
-*.xccheckout
 *.moved-aside
-*.xcuserstate
+*.xccheckout
+*.xcscmblueprint
 
