--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 
-# Created by https://www.gitignore.io/api/cvs,emacs,ensime,jetbrains,kate,kdevelop4,linux,matlab,mercurial,notepadpp,osx,slickedit,sublimetext,svn,tags,textmate,vagrant,vim,windows,xcode
+# Created by https://www.gitignore.io/api/osx,cvs,ensime,jetbrains,jetbrains,patch,kate,kdevelop4,linux,matlab,mercurial,notepadpp,emacs,slickedit,sublimetext,svn,tags,textmate,vagrant,vim,windows,xcode
+
+### NotepadPP ###
+# Notepad++ backups #
+*.bak
+
 
 ### OSX ###
-.DS_Store
+*.DS_Store
 .AppleDouble
 .LSOverride
 
@@ -27,13 +32,6 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
-
-
-### CVS ###
-/CVS/*
-**/CVS/*
-.cvsignore
-*/.cvsignore
 
 
 ### Ensime ###
@@ -94,7 +92,66 @@ fabric.properties
 
 # *.iml
 # modules.xml
+# .idea/misc.xml 
+# *.ipr
 
+
+### JetBrains ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff:
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
+
+# Sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+
+# Gradle:
+.idea/gradle.xml
+.idea/libraries
+
+# Mongo Explorer plugin:
+.idea/mongoSettings.xml
+
+## File-based project format:
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+### JetBrains Patch ###
+# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
+
+# *.iml
+# modules.xml
+# .idea/misc.xml 
+# *.ipr
+
+
+#!! ERROR: patch is undefined. Use list command to see defined gitignore types !!#
 
 ### Kate ###
 # Swap Files #
@@ -151,9 +208,11 @@ octave-workspace
 .hgtags
 
 
-### NotepadPP ###
-# Notepad++ backups #
-*.bak
+### CVS ###
+/CVS/*
+**/CVS/*
+.cvsignore
+*/.cvsignore
 
 
 ### Emacs ###
@@ -229,6 +288,19 @@ flycheck_*.el
 
 # sftp configuration file
 sftp-config.json
+
+# Package control specific files
+Package Control.last-run
+Package Control.ca-list
+Package Control.ca-bundle
+Package Control.system-ca-bundle
+Package Control.cache/
+Package Control.ca-certs/
+bh_unicode_properties.cache
+
+# Sublime-github package stores a github token in this file
+# https://packagecontrol.io/packages/sublime-github
+GitHub.sublime-settings
 
 
 ### SVN ###
@@ -322,4 +394,3 @@ xcuserdata/
 *.moved-aside
 *.xccheckout
 *.xcscmblueprint
-
